# griphTUI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: tour.py
src/griphtui/: __init__.py  _console.py  _glyphs.py  _keys.py  layout.py  prompts.py  spinner.py  status.py
tests/: test_keys.py  test_layout.py  test_prompts.py  test_spinner.py  test_status.py
