[project]
name = "griphtui"
version = "0.1.0"
description = "Clack-style terminal UI primitives for prompt-first Python TUIs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "KDS" }]
dependencies = ["rich>=15.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/griphtui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
